--- a/angular.json
+++ b/angular.json
@@ -28,16 +28,20 @@
             ],
             "styles": [
               "src/styles.css"
+              ,"./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/bootstrap/dist/js/bootstrap.js"
+             
+            ]
           },
           "configurations": {
             "production": {
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "600kb",
+                  "maximumError": "2mb"
                 },
                 {
                   "type": "anyComponentStyle",
